added a welcome note in index.html

--- a/Search/src/index.html
+++ b/Search/src/index.html
@@ -11,6 +11,7 @@
   </head>
 
 <body>
+  <h1 class="jumobtron">Welcome to github Search</h1>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <app-root></app-root>
