added a span in index.html

--- a/Search/src/index.html
+++ b/Search/src/index.html
@@ -11,10 +11,13 @@
   </head>
 
 <body>
-  <h1 class="jumobtron">Welcome to github Search</h1>
+  <h1 class="jumobtron">WELCOME TO GIT SEARCH</h1>
+  <p><span>F</span>ind your repositories <span>H</span><em>ere</em></p>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <app-profile></app-profile>
   <app-root></app-root>
 </body>
 
 </html>
+<router></router>
