--- a/Search/src/index.html
+++ b/Search/src/index.html
@@ -6,13 +6,14 @@
   <title>Search</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Libre+Baskerville|Oswald&display=swap" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   </head>
 
 <body>
   <h1 class="jumobtron">WELCOME TO GIT SEARCH</h1>
-  <p><span>F</span>ind your repositories <span>H</span><em>ere</em></p>
+  <p id="and"><span>F</span>ind your repositories <span>H</span><em>ere</em></p>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <app-profile></app-profile>
