created a readme md fiile to help users in understanding my project

--- a/Search/src/index.html
+++ b/Search/src/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <h1 class="jumobtron">WELCOME TO GIT SEARCH</h1>
-  <p id="and"><span>F</span>ind your repositories <span>H</span><em>ere</em></p>
+  <p id="and"><span id="span">F</span>ind your repositories <span id="span">H</spanid="span"><em>ere</em></p>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <app-profile></app-profile>
